--- a/frontend/src/app/admin/service/service.component.html
+++ b/frontend/src/app/admin/service/service.component.html
@@ -1,4 +1,5 @@
-<h1>{{ state }} error {{ error }}</h1>
+<h1>Liste des services</h1>
+<service-form></service-form>
 <table mat-table [dataSource]="models">
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Nom</th>
@@ -14,7 +15,7 @@
     </ng-container>
     <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef>Prix</th>
-        <th mat-cell *matCellDef="let model"> {{ model.price }}</th>
+        <td mat-cell *matCellDef="let model"> {{ model.price }}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="headers"></tr>
     <tr mat-row *matRowDef="let row; columns: headers;"></tr>
