--- a/frontend/src/app/admin/service/form/form.component.html
+++ b/frontend/src/app/admin/service/form/form.component.html
@@ -1,22 +1,24 @@
-<h2 mat>{{ model ? 'Modification de service' : 'Création de service' }}</h2>
-<form id="service-form">
-    <mat-form-field class="field">
-        <mat-label>Nom</mat-label>
-        <input matInput [value]="model ? model.name : ''" />
-    </mat-form-field>
-    <mat-form-field class="field">
-        <mat-label>Prix</mat-label>
-        <input matInput [value]="model ? model.price : ''" />
-    </mat-form-field>
-    <mat-form-field class="field">
-        <mat-label>Commission</mat-label>
-        <input matInput [value]="model ? model.price : '' " />
-    </mat-form-field>
-    <mat-form-field class="field">
-        <mat-label>Durrée</mat-label>
-        <input matInput [value]="model ? model.duration : ''" />
-        <mat-hint>En minute</mat-hint>
-    </mat-form-field>
-    <button class="button primary" type="submit" mat-raised-button color="primary" >Valider</button>
-    <button class="button error" mat-raised-button color="warn" >Annuler</button>
-</form>
+<h2 mat-dialog-title>{{ model ? 'Modification de service' : 'Création de service' }}</h2>
+<mat-dialog-content>
+    <form id="service-form">
+        <mat-form-field class="field">
+            <mat-label>Nom</mat-label>
+            <input matInput [(ngModel)]="model.name" name="name"/>
+        </mat-form-field>
+        <mat-form-field class="field">
+            <mat-label>Prix</mat-label>
+            <input matInput [(ngModel)]="model.price" name="price"/>
+        </mat-form-field>
+        <mat-form-field class="field">
+            <mat-label>Commission</mat-label>
+            <input matInput [(ngModel)]="model.committee" name="committee"/>
+        </mat-form-field>
+        <mat-form-field class="field">
+            <mat-label>Durrée</mat-label>
+            <input matInput [(ngModel)]="model.duration" name="duration"/>
+            <mat-hint>En minute</mat-hint>
+        </mat-form-field>
+        <button class="button primary" type="submit" mat-raised-button color="primary" >Valider</button>
+        <button class="button error" mat-raised-button color="warn" (click)="onCancelClick()" >Annuler</button>
+    </form>
+</mat-dialog-content>
