--- a/frontend/src/app/admin/service/service.component.html
+++ b/frontend/src/app/admin/service/service.component.html
@@ -1,5 +1,5 @@
 <h1>Liste des services</h1>
-<service-form></service-form>
+<button mat-raised-button  color="primary" (click)="openFormForAdd()"> Ajouter un service</button>
 <table mat-table [dataSource]="models">
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Nom</th>
@@ -17,6 +17,14 @@
         <th mat-header-cell *matHeaderCellDef>Prix</th>
         <td mat-cell *matCellDef="let model"> {{ model.price }}</td>
     </ng-container>
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button (click)="openEditForm(element)">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
     <tr mat-header-row *matHeaderRowDef="headers"></tr>
     <tr mat-row *matRowDef="let row; columns: headers;"></tr>
 </table>
