--- a/frontend/src/app/admin/service/form/form.component.scss
+++ b/frontend/src/app/admin/service/form/form.component.scss
@@ -3,15 +3,17 @@
     flex-wrap: wrap;
 }
 .field{
-    width: 100%;
     flex: 0 0 48%;
+    margin-top: 4%;
     margin-left: 1%;
     margin-right: 1%;
-    margin-top: 1%;
+}
+.field input{
+    width: 100%;
 }
 .button{
     width: 100%;
     align-content: center;
     flex: 0 0 48%;
-    margin: 1% 1% 0 1%;
+    margin: 1% 1% 0 1%;    
 }
