--- a/frontend/src/app/authentification/authentification.component.html
+++ b/frontend/src/app/authentification/authentification.component.html
@@ -24,7 +24,7 @@
       <p>
 
       <a href="/authentification/register?role=customer" style="text-decoration: none; margin-right: 10px;">S'inscrire</a>
-      <a href="/forgot-password" style="text-decoration: none;">Mot de passe oublié</a>
+      <a href="/authentification/recoverycomponent" style="text-decoration: none;">Mot de passe oublié</a>
       </p>
     </form>
   </mat-card-content>
