--- a/frontend/src/app/admin/home/home.component.html
+++ b/frontend/src/app/admin/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<p>Menu !</p>
+<app-list
+  [data]="employe_list"
+  [column]="column"
+  [clicked]="getPersonneLink"
+  [nameDelete]="'name'"
+  [edit]="true"
+  [trash]="drop" />
