--- a/frontend/src/app/authentification/register/register.component.html
+++ b/frontend/src/app/authentification/register/register.component.html
@@ -1,74 +1,96 @@
-<mat-card>
-  <mat-card-content>
+<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+  <p-card [style]="{width:'500px', height: '100%'}">
+  <mat-card-content style="width: 100%; height: 100%;">
     <form #registerForm="ngForm" (ngSubmit)="handleSubmit()">
-      <h2>Inscription</h2>
-      <mat-error *ngIf="registerValid!=null">
-        {{registerValid}}
-      </mat-error>
-      <mat-error *ngIf="error_log">{{error_log}}</mat-error>
-        <mat-form-field appearance="outline">
-          <mat-label>Nom</mat-label>
-          <input matInput [(ngModel)]="person.name" name="name" required>
-          <mat-error>
-            Ce champ est obligatoire
-          </mat-error>
-        </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Adresse email</mat-label>
-        <input matInput [(ngModel)]="person.mail" type="email" name="mail" required>
-        <mat-error >
-          Ce champ est obligatoire
-        </mat-error>
-      </mat-form-field>
-
-      <!-- champ pour l'employé -->
-      <div *ngIf="role === 'employe'">
+      <div class="flex justify-content-center">
+        <h2>Inscription</h2>
+        <p-message *ngIf="registerValid!=null" severity="error" text="{{registerValid}}"></p-message>
+        <p-message *ngIf="error_log" severity="error" text="{{error_log}}"></p-message>
+        <p-inputGroup>
+          <p-inputGroupAddon>
+            <i class="pi pi-user"></i>
+          </p-inputGroupAddon>
+          <input [(ngModel)]="person.name" aria-describedby="name-help" id="name" name="name" pInputText
+                 placeholder="Nom" required/>
+        </p-inputGroup>
         <br>
-        <span  style="float: left;text-align: left; margin-top: -17px; max-height: 3px">Horaires de travail:</span><br>
-        <div style="display: flex; align-items: center;">
-          <mat-form-field appearance="outline" style="width: 40%; height: 2%;">
-            <input matInput type="time" placeholder="Heure de début" [(ngModel)]="person.start_time" name="start_time" >
-          </mat-form-field>
-          <span style="width: 20%; text-align: center;"> à </span>
-          <mat-form-field appearance="outline" style="width: 40%;  height: 40%;">
-            <input matInput type="time" placeholder="Heure de fin" [(ngModel)]="person.end_time" name="end_time" >
-          </mat-form-field>
+        <p-inputGroup>
+          <p-inputGroupAddon>
+            <i class="pi pi-envelope"></i>
+          </p-inputGroupAddon>
+          <input [(ngModel)]="person.mail" aria-describedby="mail-help" id="mail" name="mail" pInputText
+                 placeholder="Email" required
+                 type="email"/>
+        </p-inputGroup>
+        <br>
+
+        <!-- champ pour l'employé -->
+        <div *ngIf="role === 'employe'">
+          <br>
+          <span style="float: left;text-align: left; margin-top: -17px; max-height: 3px">Horaires de travail:</span><br>
+          <div style="display: flex; align-items: center;">
+            <div class="p-field" style="width: 40%; height: 2%;">
+              <input [(ngModel)]="person.start_time" pInputText name="start_time" type="time"/>
+            </div>
+            <span style="width: 20%; text-align: center;"> à </span>
+            <div class="p-field" style="width: 40%;  height: 40%;">
+              <input [(ngModel)]="person.end_time" pInputText name="end_time" placeholder="Heure de fin" type="time">
+            </div>
+          </div>
+          <br>
         </div>
-      </div>
 
 
-
-      <!-- champ pour le client -->
-      <div *ngIf="role === 'customer'">
-        <mat-form-field appearance="outline">
-          <mat-label>Service préféré</mat-label>
-          <mat-select [(ngModel)]="person.prefered_service" name="prefered_service">
-            <mat-option *ngFor="let srv of service_list" [value]="srv._id">{{srv.name}} {{srv.duration}}min</mat-option>
-          </mat-select>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Employé préféré</mat-label>
-          <mat-select [(ngModel)]="person.prefered_emp" name="prefered_emp">
-            <mat-option *ngFor="let emp of employe" [value]="emp._id">{{emp.name}}</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <mat-form-field appearance="outline">
-        <mat-label>Mot de passe</mat-label>
-        <input matInput type="password" [(ngModel)]="person.password" name="password" required>
-        <mat-error>
-          Ce champ est obligatoire
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Retaper le mot de passe</mat-label>
-        <input matInput type="password" [(ngModel)]="confirmPassword" name="confirmPassword" required>
-        <mat-error *ngIf="password_message!=null">
+        <!-- champ pour le client -->
+        <div *ngIf="role === 'customer'">
+          <br>
+          <div style="display: flex; justify-content: space-between;">
+            <p-dropdown
+              [(ngModel)]="person.prefered_service"
+              [options]="service_list" id="float"
+              optionLabel="name"
+              [ngModelOptions]="{standalone: true}"
+              optionValue="_id"
+              placeholder="service préféré"></p-dropdown>
+          <!-- Employé préféré -->
+            <p-dropdown
+              [(ngModel)]="person.prefered_emp"
+              [options]="employe" id="float-label"
+              optionLabel="name"
+              [ngModelOptions]="{standalone: true}"
+              optionValue="_id"
+              placeholder="employé préféré"></p-dropdown>
+          </div>
+          <br>
+          <br>
+        </div>
+        <p-inputGroup>
+          <p-inputGroupAddon>
+            <i class="pi pi-lock"></i>
+          </p-inputGroupAddon>
+          <input [(ngModel)]="person.password" name="password" pInputText placeholder="mot de passe" required
+                 type="password">
+        </p-inputGroup>
+        <br>
+        <p-inputGroup>
+          <p-inputGroupAddon>
+            <i class="pi pi-lock"></i>
+          </p-inputGroupAddon>
+          <input [(ngModel)]="confirmPassword" name="confirmPassword" pInputText placeholder="Retaper mot de passe"
+                 required type="password">
+        </p-inputGroup>
+        <p *ngIf="password_message!=null" style="color: crimson">
+          <br>
           {{password_message}}
-        </mat-error>
-      </mat-form-field>
-      <button mat-raised-button color="primary" [disabled]="!registerForm.form.valid">S'inscrire</button>
+        </p>
+        <br>
+        <ng-container *ngIf="role==='customer'">
+          <p-button (click)="goBack()" severity="secondary">Retour</p-button>
+          {{'   '}}</ng-container>
+        <p-button [disabled]="!registerForm.form.valid" [style]="{float:'right'}" (onClick)="handleSubmit()" color="primary" label="S'inscrire"></p-button>
+        <br>
+      </div>
     </form>
   </mat-card-content>
-</mat-card>
-
+</p-card>
+</div>
