crud-employe-done

--- a/frontend/src/app/admin/home/home.component.html
+++ b/frontend/src/app/admin/home/home.component.html
@@ -1,8 +1,2 @@
 <p>Menu !</p>
-<app-list
-  [data]="employe_list"
-  [column]="column"
-  [clicked]="getPersonneLink"
-  [nameDelete]="'name'"
-  [edit]="true"
-  [trash]="drop" />
+<app-employe-component></app-employe-component>
