--- a/frontend/src/app/employe/employe-component/employe-component.component.html
+++ b/frontend/src/app/employe/employe-component/employe-component.component.html
@@ -1,1 +1,10 @@
 <p>employe-component works!</p>
+<app-list
+  [data]="employe_list"
+  [column]="column"
+  [clicked]="getPersonneLink"
+  [nameDelete]="'name'"
+  [edit]="true"
+  [trash]="drop"
+  [MyComponent]="FormComponent"
+/>
