update-front-end

--- a/frontend/src/app/views/admin/discount/discount.component.html
+++ b/frontend/src/app/views/admin/discount/discount.component.html
@@ -4,6 +4,7 @@
   [column]="column"
   [nameDelete]="'name'"
   [edit]="true"
+  header="offre Spécial"
   [trash]="drop"
   [MyComponent]="FormDiscountComponent"
 />
