--- a/frontend/src/app/views/employe/employe-component/employe-component.component.html
+++ b/frontend/src/app/views/employe/employe-component/employe-component.component.html
@@ -5,6 +5,7 @@
   [clicked]="getPersonneLink"
   [nameDelete]="'name'"
   [edit]="true"
+  header="employée"
   [trash]="drop"
   [MyComponent]="FormComponent"
 />
