--- a/frontend/src/app/views/employe/employe-component/form/form.component.html
+++ b/frontend/src/app/views/employe/employe-component/form/form.component.html
@@ -56,9 +56,15 @@
             {{password_message}}
           </p>
           <br>
-
+          <div class="grid formgrid" style="position:relative;top:10px;">
+          <div class="col-12 md:col-2">
+              <p-button (onClick)="close()" severity="secondary" label="annuler" />
+          </div>
+          <div class="col-12 md:col-5">
           <p-button [disabled]="!registerForm.form.valid" (onClick)="submit()" severity="success" label="valider"></p-button>
+          </div>
           <br>
+          </div>
 <!--        </div>-->
       </form>
 <!--  </p-card>-->
