--- a/frontend/src/app/views/customer/ask-appointment/confirm/confirm.component.html
+++ b/frontend/src/app/views/customer/ask-appointment/confirm/confirm.component.html
@@ -1,4 +1,4 @@
-<p>Rendez vous du {{appointmentDate | date:'d MMMM yyyy':'':'fr'}}</p>
+<p>Rendez vous du {{appointmentDate | date:'d MMMM yyyy à HH:mm':'':'fr'}}</p>
 <p-table [value]="services" >
     <ng-template pTemplate="header">
         <tr>
