--- a/frontend/src/app/layout/app.topbar.component.html
+++ b/frontend/src/app/layout/app.topbar.component.html
@@ -15,7 +15,7 @@
     <div #topbarmenu class="layout-topbar-menu" [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}">
         <button class="p-link layout-topbar-button">
             <i class="pi pi-calendar"></i>
-            <span>Calendar</span>
+            <span>Calendrier</span>
         </button>
         <button class="p-link layout-topbar-button">
             <i class="pi pi-user"></i>
@@ -23,7 +23,7 @@
         </button>
         <button class="p-link layout-topbar-button" (click)="logOut()" >
             <i class="pi pi-sign-out"></i>
-            <span>Settings</span>
+            <span>Se déconnecter</span>
         </button>
     </div>
 </div>
