--- a/frontend/src/app/views/customer/customer-profile/customer-profile.component.html
+++ b/frontend/src/app/views/customer/customer-profile/customer-profile.component.html
@@ -1,3 +1,9 @@
+<p>Photo de profil</p>
+<p-fileUpload name="file" (onUpload)="onUpload()" [url]="getUrl()" accept="image/*">
+    <ng-template pTemplate="content">
+        <p-avatar image="{{getProfile()}}" shape="circle" size="xlarge"></p-avatar>
+    </ng-template>
+</p-fileUpload>
 <form *ngIf="fb" [formGroup]="fb">
     <div class="flex flex-column gap-2">
         <label for="mail">E-mail</label>
