--- a/frontend/src/app/views/authentification/register/register.component.html
+++ b/frontend/src/app/views/authentification/register/register.component.html
@@ -70,7 +70,7 @@
                         <br> <br><br></div>
                    <div *ngIf="error_log"> <p-message  severity="error" text="{{error_log}}"></p-message><br> <br><br></div>
 
-                    <button pButton pRipple  label="Se connecter" (click)="handleSubmit()" class="w-full p-3 text-xl"></button>
+                    <button pButton pRipple  label="S'inscrire" (click)="handleSubmit()" class="w-full p-3 text-xl"></button>
                 </div>
             </div>
         </div>
