send mail si rdv deplacer

--- a/frontend/src/app/layout/app.topbar.component.html
+++ b/frontend/src/app/layout/app.topbar.component.html
@@ -11,7 +11,7 @@
     <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button" (click)="layoutService.showProfileSidebar()">
         <i class="pi pi-ellipsis-v"></i>
     </button>
-
+    <div><p> Utilisateur : {{profile?.name?.toUpperCase()}}, rôle: {{profile?.role}}</p></div>
     <div #topbarmenu class="layout-topbar-menu" [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}">
         <button class="p-link layout-topbar-button">
             <i class="pi pi-calendar"></i>
