--- a/frontend/src/app/views/admin/discount/discount.component.html
+++ b/frontend/src/app/views/admin/discount/discount.component.html
@@ -3,8 +3,10 @@
   [data]="discount_list"
   [column]="column"
   [nameDelete]="'name'"
+  [totalRow]="totalrow"
   [edit]="true"
   header="offre Spécial"
+  [updatePage]="updatePage"
   [trash]="drop"
   [MyComponent]="FormDiscountComponent"
 />
