Correction bug upload

--- a/frontend/src/app/views/employe/emp-profile/emp-profile.component.html
+++ b/frontend/src/app/views/employe/emp-profile/emp-profile.component.html
@@ -1,7 +1,7 @@
 <p>Photo de profil</p>
-<p-fileUpload name="file" (onUpload)="onUpload()" [url]="getUrl()" accept="image/*">
+<p-fileUpload name="file" (onUpload)="onUpload($event)" [url]="getUrl()" accept="image/*">
     <ng-template pTemplate="content">
-        <p-avatar image="{{getProfile()}}" shape="circle" size="xlarge"></p-avatar>
+        <p-avatar [image]="selectedPicture ? selectedPicture : getProfile()" shape="circle" size="xlarge"></p-avatar>
     </ng-template>
 </p-fileUpload>
 <form class="form" *ngIf="fb" [formGroup]="fb">
