--- a/frontend/src/app/views/customer/ask-appointment/ask-appointment.component.html
+++ b/frontend/src/app/views/customer/ask-appointment/ask-appointment.component.html
@@ -9,32 +9,41 @@
 </form>
 
 <h2>Liste des services séléctionnées</h2>
-<p-table [value]="selectedServices" >
-    <ng-template pTemplate="header">
-        <tr>
-            <th>Nom</th>
-            <th>Prix</th>
-            <th>Employé responsable</th>
-            <th></th>
-            <th>Durrée estimée</th>
-            <th></th>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-product>
-        <tr>
-            <td>{{ product.name }}</td>
-            <td>{{ product.price }} Ar.</td>
-            <td>{{ product.emp_name ? product.emp_name : 'Aucun employé selectionné' }}</td>
-            <td><p-avatar *ngIf="product.emp_avatar" size="xlarge" shape="circle" [image]="getProfile(product.emp_avatar)"></p-avatar></td>
-            <td>{{ product.duration }} Mn</td>
-            <td><p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" (click)="removeFromSelected(product)" ></p-button></td>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="footer">
-        <tr>
-            <td><b>Total</b></td>
-            <td><b>{{getTotalPrice() }} Ar.</b></td>
-        </tr>
-    </ng-template>
-</p-table>
+<div class="flex">
+    <p-table class="flex-auto" [value]="selectedServices" >
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Nom</th>
+                <th>Prix</th>
+                <th>Employé responsable</th>
+                <th></th>
+                <th>Durrée estimée</th>
+                <th></th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-product>
+            <tr>
+                <td>{{ product.name }}</td>
+                <td>{{ product.price }} Ar.</td>
+                <td>{{ product.emp_name ? product.emp_name : 'Aucun employé selectionné' }}</td>
+                <td><p-avatar *ngIf="product.emp_avatar" size="xlarge" shape="circle" [image]="getProfile(product.emp_avatar)"></p-avatar></td>
+                <td>{{ product.duration }} Mn</td>
+                <td><p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" (click)="removeFromSelected(product)" ></p-button></td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="footer">
+            <tr>
+                <td><b>Total</b></td>
+                <td><b>{{getTotalPrice() }} Ar.</b></td>
+            </tr>
+        </ng-template>
+    </p-table>
+    <p-table class="flex-auto" >
+        <ng-template pTemplate="header">
+            <tr>
+                <th></th>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
 <p-button [style]="{width:'100%'}" label="Valider" severity="success" (onClick)="confirm()"></p-button>
