--- a/frontend/src/app/views/admin/service/form/form.component.scss
+++ b/frontend/src/app/views/admin/service/form/form.component.scss
@@ -10,12 +10,23 @@
     margin-right: 1%;
     margin-top: 1%;
 }
+.field.full-width {
+    flex: 0 0 100%;
+}
 .field input{
     width: 100%;
+}
+.button-container {
+    display: flex;
+    flex: 0 0 100%;
+    justify-content: space-between;
 }
 .button{
     width: 100%;
     align-content: center;
     flex: 0 0 48%;
     margin: 1% 1% 0 1%;
+}
+.button.half-width {
+    flex: 0 0 50%;
 }
