correction des bug

--- a/frontend/src/app/views/admin/service/form/form.component.html
+++ b/frontend/src/app/views/admin/service/form/form.component.html
@@ -20,7 +20,7 @@
         <small id="duration-help" >La durée doit être un nombre supérieur ou égal à 0</small>
     </div>
     <div class="field full-width">
-        <label class="block" for="in">Durée en minute</label>
+        <label class="block" for="in">Offre spécial</label>
         <p-dropdown id="in"  [style]="{width:'100%'}" appendTo="body" formControlName="discount" [options]="options" />
     </div>
     <div class="button-container">
